--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd backend && nodemon server.js",
-    "client": "cd frontend && vite",
-    "build": "cd frontend && vite build",
+    "dev": "concurrently \"npm run server\" \"vite\"",
+    "server": "nodemon server.js",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "cd frontend && vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
